<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="Settings">

    <PreferenceCategory android:title="@string/pref_category_version_title">
        <Preference
            android:key="@string/pref_key_protector_fido_version" />

        <Preference
            android:key="@string/pref_key_idcloud_risk_version" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_general_title">

        <CheckBoxPreference
            android:title="@string/pref_title_show_logs"
            android:defaultValue="false"
            android:key="@string/pref_key_show_logs" />

        <Preference
            android:key="@string/pref_key_reset"
            android:title="@string/pref_title_reset"/>
    </PreferenceCategory>

</PreferenceScreen>
