<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.fragments.LandingPageFragment">

    <include android:id="@+id/top_view"
        layout="@layout/content_top" />

    <TextView
        android:id="@+id/txtLandinginfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qrcode_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_view"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnQRCode"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#3F51B5"
        android:elevation="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/scan_button_title"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:minHeight="60dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLandinginfo"
        app:rippleColor="#33AAAAAA"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNo"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#3F51B5"
        android:elevation="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/no_button_title"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:minHeight="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/txtLandinginfo"
        app:rippleColor="#33AAAAAA" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>